<resources>
    <string name="app_name">Sudoku</string>

    <string name="title">Sudoku</string>
    <string name="Continue">Continue</string>
    <string name="NewGame">New Game</string>
    <string name="About">About</string>
    <string name="Exit">Exit</string>
    <string name="About_title">About Sudoku</string>
    <string name="About_text">\ 数独（すうどく，Sūdoku）是一种运用纸、笔进行演算的逻辑游戏。玩家需要根据9×9盘面上的已知数字，推理出所有剩余空格的数字，并满足每一行、每一列、每一个粗线宫内的数字均含1-9，不重复。
数独盘面是个九宫，每一宫又分为九个小格。在这八十一格中给出一定的已知数字和解题条件，利用逻辑和推理，在其他的空格上填入1-9的数字。使1-9每个数字在每一行、每一列和每一宫中都只出现一次，所以又称“九宫格”。</string>

    <string name="settings_label">Setting...</string>
    <string name="settings_title">数独设置</string>
    <string name="settings_shortcut">s</string>
    <string name="music_title">音乐</string>
    <string name="music_summary">播放背景音乐</string>
    <string name="hints_title">提示</string>
    <string name="hints_summary">Show hints during play</string>
</resources>
